--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -1,8 +1,9 @@
 name: C/C++ CI
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: [ master , test-action]
   #pull_request:
     #branches: [ master ]
 
